--- a/ExportDataService/ExportDataService.csproj
+++ b/ExportDataService/ExportDataService.csproj
@@ -21,6 +21,7 @@
 	<ItemGroup>
 		<ProjectReference Include="..\DataReceiving\DataReceiving.csproj" />
 		<ProjectReference Include="..\Conversion\Conversion.csproj" />
+		<ProjectReference Include="..\LogerExtensionDelegate\LogerExtensionDelegate.csproj" />
 		<ProjectReference Include="..\Serialization\Serialization.csproj" />
 	</ItemGroup>
 </Project>
